# rs-mcp-server

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.fvt  Dockerfile.fvt.dockerignore  Makefile  README.md  cache.py  pyproject.toml  requirements.txt  scratch_probe_clues.py  server.py
.github/workflows/: codeql.yml  release.yml  secret-scan.yml  test.yml  version-tag.yml
deploy/: rs-mcp-server.values.yaml
docs/: clue-tool-limitations.md  security.md
scripts/: docker.sh  fvt_traffic.sh  generate_clue_data.py  smoke_test_tools.py  start.sh  stop.sh
src/rs_mcp_server/: __init__.py  cache.py  config.py  logging.py  server.py  tls.py  version.py
src/rs_mcp_server/resources/clues/: coordinates_osrs.json  coordinates_rs3.json  visual_clues.json
src/rs_mcp_server/tools/: __init__.py  _aliases.py  _constants.py  _http.py  _registry.py  _wiki_parsing.py  achievements.py  alchables.py  celtic_knot.py  clues.py  drops.py  equipment.py  hiscores.py  moneymakers.py  monsters.py  player_progress.py  prices.py  quests.py  recipes.py  settings.py  sliding_puzzle.py  wiki.py
tests/: _shared_fixtures.py  conftest.py  test_alchables.py  test_cache.py  test_cache_e2e.py  test_clues.py  test_equipment.py  test_hiscores.py  test_prices.py  test_quests.py  test_recipes.py  test_server.py
tests/fvt/: _fvt_fixtures.py  conftest.py  test_smoke.py
tests/unit/: _unit_fixtures.py  conftest.py  test_achievements.py  test_alchables.py  test_cache.py  test_cache_e2e.py  test_celtic_knot.py  test_clues.py  test_config.py  test_drops.py  test_equipment.py  test_hiscores.py  test_http.py  test_logging.py  test_moneymakers.py  test_monsters.py  test_player_progress.py  test_prices.py  test_quests.py  test_recipes.py  test_server.py  test_settings.py  test_sliding_puzzle.py  test_tls.py  test_version.py  test_wiki.py  test_wiki_parsing.py
tools/: _http.py  hiscores.py  prices.py  quests.py  wiki.py
