[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-mcp-server"
version = "0.1.0"
description = "RuneScape MCP Server — exposes RuneScape research tools to Claude Desktop via the Model Context Protocol"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "roman>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "ruff",
    "pip-tools",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "anyio: async test handled by the anyio pytest plugin",
    "fvt: function-verification test that requires a running rs-mcp-server on localhost:8000",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Defaults (E4/E7/E9, F) plus import sorting (I).
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
# Keep multiple aliased imports from one module on a single statement.
combine-as-imports = true
